<resources>
    <string name="app_name">Touri-Touri</string>
    <string name="les_sites">Sites touristiques</string>
    <string name="les_departements">Régions</string>
    <string name="titre">titre</string>
    <string name="departement">departement</string>
    <string name="petite_description">petite description</string>
    <string name="visiter">Visiter</string>
    <string name="partager">Partager</string>
    <string name="prix">prix</string>
    <string name="etoile">etoile</string>
    <string name="voir">Tout voir</string>
    <string name="propos">à propos</string>
    <string name="reserver">reserver</string>
    <string name="reservation">Reservation</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="email">Email</string>
    <string name="numero_de_telephone">Numéro de télephone</string>
    <string name="adresse">Adresse</string>
    <string name="je_reserve">je réserve</string>
    <string name="_2020">© 2020</string>
    <string name="description">Description</string>
    <string name="a_propos_du_site">A propos du site</string>
    <string name="a_savoir">A savoir</string>
    <string name="date_de_visite">Date des prochaines visites</string>
    <string name="champ_requis">ce champ est requis</string>
    <string name="politique_de_confidentialite">Politique de confidentialité.</string>
    <string name="confidentialite">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="nombre_de_personne">Nombre de personne</string>
    <string name="a_votre_disposition">A votre disposition</string>
    <string name="propos_votre_date_de_visite">Proposé votre date de visite</string>
    <string name="aucun_r_sultat_trouv">Aucun résultat trouvé</string>
</resources>