<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ReservationActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blues_5"
        android:id="@+id/toolbar"
        app:titleTextColor="@color/white"
        app:title="@string/reservation"/>

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:padding="@dimen/m8"
       android:orientation="vertical"
       android:layout_marginTop="?attr/actionBarSize">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="@dimen/m8">

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/nom"
               app:helperTextEnabled="true"
               app:helperText="@string/champ_requis"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               app:hintAnimationEnabled="true"
               android:layout_marginBottom="@dimen/m8">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/resFirstName"
                   android:inputType="textPersonName"
                   android:maxLines="1"/>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/prenom"
               app:helperTextEnabled="true"
               app:helperText="@string/champ_requis"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_marginBottom="@dimen/m8">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/resName"
                   android:inputType="textPersonName"
                   android:maxLines="1"/>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/email"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_marginBottom="@dimen/m8">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/resEmail"
                   android:inputType="textEmailAddress"
                   android:maxLines="1"/>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:hint="@string/numero_de_telephone"
               app:helperTextEnabled="true"
               app:helperText="@string/champ_requis"
               android:layout_marginBottom="@dimen/m8">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/resPhone"
                   android:inputType="phone"
                   android:maxLines="1"/>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:hint="@string/adresse"
               app:helperTextEnabled="true"
               app:helperText="@string/champ_requis"
               android:layout_marginBottom="@dimen/m8">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/resQuartier"
                   android:inputType="textPostalAddress"
                   android:maxLines="1"/>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:hint="@string/nombre_de_personne"
               app:helperTextEnabled="true"
               app:helperText="@string/champ_requis"
               android:layout_marginBottom="@dimen/m8">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/nbreDePersonne"
                   android:inputType="number"
                   android:maxLines="1"/>
           </com.google.android.material.textfield.TextInputLayout>


           <TextView
               android:id="@+id/textView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:padding="@dimen/m8"
               android:text="@string/date_de_visite"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textStyle="bold" />

           <com.google.android.material.chip.ChipGroup
               android:id="@+id/chipsPrograms"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/m8"
               app:chipSpacing="@dimen/m8"
               app:singleSelection="false">

           </com.google.android.material.chip.ChipGroup>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:hint="@string/propos_votre_date_de_visite"
               app:helperTextEnabled="true"
               app:helperText="format de date : jj/MM/AAAA"
               app:helperTextTextAppearance="?android:textAppearanceSmall"
               android:layout_marginBottom="@dimen/m8">
               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="date"
                   android:id="@+id/resDate"/>
           </com.google.android.material.textfield.TextInputLayout>

           <CheckBox
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/m8"
               android:id="@+id/confidentialite"
               android:textAppearance="?android:textAppearanceSmall"
               android:text="@string/politique_de_confidentialite"/>
           <Button
               android:id="@+id/reservationBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/je_reserve"
               android:padding="@dimen/m8"
               style="?attr/materialButtonOutlinedStyle" />

       </LinearLayout>

   </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>