<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardSite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/m8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/s150">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:scaleType="centerCrop"
                android:id="@+id/imageSite"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/trans"/>

            <RatingBar
                android:id="@+id/siteRating"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/gold"
                android:backgroundTint="@color/white"
                android:progressBackgroundTint="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/m8"
                android:layout_marginBottom="@dimen/m8"
                android:numStars="5" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/m8">

            <!-- Title, secondary and supporting text -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titre"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:id="@+id/titreSite"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prix"
                        android:maxLines="1"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:id="@+id/priceSite"
                        android:textAppearance="?attr/textAppearanceBody1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/m8"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/etoile"
                            android:maxLines="1"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:id="@+id/starSite"
                            android:textAppearance="?attr/textAppearanceBody2" />

                        <ImageButton
                            android:background="@android:color/transparent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_remove_red_eye_24"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m8"
                android:text="@string/departement"
                android:maxLines="1"
                android:id="@+id/departementSite"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m16"
                android:id="@+id/descriptionSite"
                android:maxLines="3"
                android:text="@string/petite_description"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m8"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/m8"
                android:text="@string/visiter"
                android:id="@+id/visiterSiteBtn"
                style="?attr/borderlessButtonStyle" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partager"
                style="?attr/borderlessButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
