<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="@dimen/m8"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RatingBar
            android:id="@+id/siteRating"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/gold"
            android:elevation="@dimen/m4"
            android:backgroundTint="@color/white"
            android:progressBackgroundTint="@color/white"
            android:layout_marginBottom="@dimen/m8"
            android:numStars="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/m8"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prix"
                android:maxLines="1"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/priceSite"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/m4"
                app:cardElevation="@dimen/m4"
                app:cardBackgroundColor="@color/browser_actions_bg_grey">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/m8"
                    android:visibility="gone"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/etoile"
                        android:maxLines="1"
                        android:layout_marginRight="@dimen/m8"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/starSite"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <ImageButton
                        android:background="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_remove_red_eye_24"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m8"
            android:text="@string/departement"
            android:maxLines="1"
            android:id="@+id/departementSite"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m8"
            android:text="@string/a_votre_disposition"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?android:attr/textColorSecondary" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsPrograms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m8"
            android:layout_marginTop="@dimen/m8"
            app:chipSpacing="@dimen/m8"
            app:singleSelection="false">

        </com.google.android.material.chip.ChipGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m8"
            android:text="@string/a_propos_du_site"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceBody2"
            android:id="@+id/siteDescription"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m8"
            android:text="@string/a_savoir"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceBody2"
            android:id="@+id/siteConsigne"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
