<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/m8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/m8"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prix"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:id="@+id/priceSite"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/browser_actions_bg_grey">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/m8"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/etoile"
                            android:maxLines="1"
                            android:layout_marginRight="@dimen/m8"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:id="@+id/starSite"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <ImageButton
                            android:background="@android:color/transparent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_stars_24"/>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m8"
                android:text="@string/departement"
                android:maxLines="1"
                android:id="@+id/departementSite"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?android:attr/textColorSecondary" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m8"
                android:text="@string/a_propos_du_site"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceBody2"
                android:id="@+id/siteDescription"/>
       <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m8"
                android:text="@string/a_savoir"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceBody2"
                android:id="@+id/siteConsigne"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/toolbar"
            app:titleTextColor="@color/white"
            app:layout_scrollFlags="scroll|enterAlways"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/s194">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/btnPrevious"
                android:src="@drawable/ic_baseline_chevron_left_24"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/btnNext"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_chevron_right_24"
                android:layout_width="wrap_content"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/reserverSiteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m16"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        android:layout_gravity="bottom|right"
        android:text="@string/reserver"
        app:icon="@drawable/ic_baseline_add_24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
